// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the "style" prop 1`] = `
.emotion-0 {
  padding: 2.5rem;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    Body
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  padding: 2.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    Body
  </div>
</div>
`;
